Revisited and improved the batch endpoints (#54) (fixes #35 and #53).
* Simplified the exception coding.

* Changed methods to use DTOs instead of POJOs. Updated usages of the
exception that was adapted previously.

* Reordered methods. Switched to transaction-annotation. Switched to use
DTOs instead of POJOs.

* Added a new DTO to simplify updating of pseudonym objects.

* Added builder-pattern to the DTO. Fixed validation bug.

* Added null-or-empty checks to the identifier items.

* Fixed a bug where a non-matching prefix broke the psn-validation.

* Refactored the pseudonym database controller so that there are no
duplicated methods for single and list CRUD-operations.

* The domain database service now uses the updated pseudonym database
service.

* The entity instance REST controller is now using the new pseudonym
database service.

* The pseudonym REST controller now makes use of the new database methods.
Added an option to force/prevent pseudonym-recalculation.

* Removed unused exceptions.